Make it w3 validated

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="nl">
+<meta charset="utf-8">
 <head>
     <title>Militieregister Gemeente Ede van 1812-1919</title>
     <style type="text/css">
