--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="nl">
 <meta charset="utf-8">
 <head>
+    <link rel="canonical" href="http://gerbenjacobs.github.io/ede_militieregister/">
     <title>Militieregister Gemeente Ede van 1812-1919</title>
     <style type="text/css">
         html, body 
